feat: user management improvements
